creado y desarrollo de index.html para /public

--- a/public/index.html
+++ b/public/index.html
@@ -7,23 +7,33 @@
 <body>
 	
 <h1>
-	SOS1920-11
+SOS1920-11
 </h1>
 
-<h2></h2>
-	- [Ignacio Calcedo Vázquez](https://github.com/IgnacioCVGitHub)
-	- [José Calcedo Vázquez](https://github.com/JaredYeeto)
-	- [Alberto Rubio Hurtado](https://github.com/arh09)
+<h2>Team
+</h2>
+	<a href="https://github.com/IgnacioCVGitHub">Ignacio Calcedo Vázquez</a>
+	<a href="https://github.com/JaredYeeto">José Calcedo Vázquez</a>
+	<a href="https://github.com/arh09">Alberto Rubio Hurtado</a>
 	
-- **Project description**: Our project is focused on the economic freedom of different countries and the impact this has in their societies with this 3 parameters:
-	- Economic freedom index
-	- Crime rates
-	- Rents per Capita
-	
-- **URL**: [http://sos1920-11.herokuapp.com](http://sos1920-11.herokuapp.com)
--  **APIs**:
-    - [https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-1/docs](https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-1/docs) (developed by [Ignacio Calcedo Vázquez](https://github.com/IgnacioCVGitHub))
-    - [https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-2/docs](https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-2/docs) (developed by [José Calcedo Vázquez](https://github.com/JaredYeeto))
-    - [https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-3/docs](https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-3/docs) (developed by [Alberto Rubio Hurtado](https://github.com/arh09))	
+<h2>
+Project description:
+</h2> 
+	Our project is focused on the economic freedom of different countries and the impact this has in their societies with this 3 parameters:
+<ul>
+	<li>Economic freedom index
+	<li>Crime rates
+	<li>Rents per Capita
+</ul>
+<h2>
+	URL
+</h2>
+	<a href="http://sos1920-11.herokuapp.com">http://sos1920-11.herokuapp.com</a>
+<h2>
+	APIs
+</h2>
+	<a href="https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-1/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-1/docs]() (developed by Ignacio Calcedo Vázquez)</a>
+		<a href="https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-2/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-2/docs]() (developed by José Calcedo Vázquez)</a>
+		<a href="https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-3/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-3/docs (developed by Alberto Rubio Hurtado)</a>
 </body>
 </html>
