--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,12 @@ Project description:
 <h2>
 	APIs
 </h2>
-	<a href="https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-1/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-1/docs]() (developed by Ignacio Calcedo Vázquez)</a>
-		<a href="https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-2/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-2/docs]() (developed by José Calcedo Vázquez)</a>
-		<a href="https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-3/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-3/docs (developed by Alberto Rubio Hurtado)</a>
+<ul>
+	
+	
+	<li><a href="https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-1/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-1/docs</a>(developed by Ignacio Calcedo Vázquez)</li>
+		<li><a href="https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-2/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-2/docs</a>(developed by José Calcedo Vázquez)</li>
+		<li><a href="https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-3/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-3/docs</a> (developed by Alberto Rubio Hurtado)</li>
+</ul>
 </body>
 </html>
