--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,12 @@ SOS1920-11
 
 <h2>Team
 </h2>
-	<a href="https://github.com/IgnacioCVGitHub">Ignacio Calcedo Vázquez</a>
-	<a href="https://github.com/JaredYeeto">José Calcedo Vázquez</a>
-	<a href="https://github.com/arh09">Alberto Rubio Hurtado</a>
+	<ul>
+	<li><a href="https://github.com/IgnacioCVGitHub">Ignacio Calcedo Vázquez</a></li>
+	<li><a href="https://github.com/JaredYeeto">José Calcedo Vázquez</a></li>
+	<li><a href="https://github.com/arh09">Alberto Rubio Hurtado</a></li>
+	</ul>
+	
 	
 <h2>
 Project description:
@@ -35,8 +38,8 @@ Project description:
 <ul>
 	
 	
-	<li><a href="https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-1/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-1/docs</a>(developed by Ignacio Calcedo Vázquez)</li>
-		<li><a href="https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-2/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-2/docs</a>(developed by José Calcedo Vázquez)</li>
+	<li><a href="https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-1/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-1/docs</a> (developed by Ignacio Calcedo Vázquez)</li>
+		<li><a href="https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-2/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-2/docs</a> (developed by José Calcedo Vázquez)</li>
 		<li><a href="https://sos1920-00.herokuapp.com/api/v1/my-awesome-resource-3/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-3/docs</a> (developed by Alberto Rubio Hurtado)</li>
 </ul>
 </body>
