start up on modification of index.html

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 		
 	
 </head>	
-	
+
 <body>
-	
+	<div id="">	
 <h1>
 SOS1920-11
 </h1>
@@ -42,5 +42,6 @@ Project description:
 		<li><a href="https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-2/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-2/docs</a> (developed by José Calcedo Vázquez)</li>
 		<li><a href="https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-3/docs">https://sos1920-11.herokuapp.com/api/v1/my-awesome-resource-3/docs</a> (developed by Alberto Rubio Hurtado)</li>
 </ul>
+</div>
 </body>
 </html>
