frontend added with svelte

--- a/public/index.html
+++ b/public/index.html
@@ -1,47 +1,20 @@
 <html>
-<head>
-		
+	<head>
+		<meta charset='utf-8'>
+		<meta name='viewport' content='width=device-width,initial-scale=1'>
 	
-</head>	
+		<title>Svelte app</title>
+	
+		<link rel='icon' type='image/png' href='/favicon.png'>
+		<link rel='stylesheet' href='/global.css'>
+		<link rel='stylesheet' href='/build/bundle.css'>
+		
+			<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+		  
+		<script defer src='/build/bundle.js'></script>
+	</head>
 
 <body>
-	<div id="">	
-<h1>
-SOS1920-11
-</h1>
 
-<h2>Team
-</h2>
-	<ul>
-	<li><a href="https://github.com/IgnacioCVGitHub">Ignacio Calcedo Vázquez</a></li>
-	<li><a href="https://github.com/JaredYeeto">José Calcedo Vázquez</a></li>
-	<li><a href="https://github.com/arh09">Alberto Rubio Hurtado</a></li>
-	</ul>
-	
-	
-<h2>
-Project description:
-</h2> 
-	Our project is focused on the economic freedom of different countries and the impact this has in their societies with this 3 parameters:
-<ul>
-	<li>Economic freedom index
-	<li>Crime rates
-	<li>Rents per Capita
-</ul>
-<h2>
-	URL
-</h2>
-	<a href="http://sos1920-11.herokuapp.com">http://sos1920-11.herokuapp.com</a>
-<h2>
-	APIs
-</h2>
-<ul>
-	
-	
-	<li><a href="https://documenter.getpostman.com/view/10701438/SzYUZgNc">https://sos1920-11.herokuapp.com/api/v1/economic-freedom-indexes/docs</a> (developed by Ignacio Calcedo Vázquez)</li>
-		<li><a href=" https://documenter.getpostman.com/view/10701451/Szf3aVio">https://sos1920-11.herokuapp.com/api/v1/crime-rates-stats/docs</a> (developed by José Calcedo Vázquez)</li>
-		<li><a href="https://documenter.getpostman.com/view/9107347/SzYUa25s">https://sos1920-11.herokuapp.com/api/v1/rents-per-capita/docs</a> (developed by Alberto Rubio Hurtado)</li>
-</ul>
-</div>
 </body>
 </html>
