--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
 		 <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/highcharts-more.js"></script>
         <script src="https://code.highcharts.com/modules/exporting.js"></script>
-        <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+		<script src="https://code.highcharts.com/modules/accessibility.js"></script>
+		<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
    
 	</head>
 
