--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width,initial-scale=1'>
 	
-		<title>Svelte app</title>
+		<title>SOS1920-11</title>
 	
 		<link rel='icon' type='image/png' href='/favicon.png'>
 		<link rel='stylesheet' href='/global.css'>
