--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	
 		<title>SOS1920-11</title>
 	
-		<link rel='icon' type='image/png' href='/favicon.png'>
+		<link rel='icon' type='image/png' href='/balance.png'>
 		<link rel='stylesheet' href='/global.css'>
 		<link rel='stylesheet' href='/build/bundle.css'>
 		
